# pkgto-web

./: Cargo.toml  Makefile  README.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
docs/: STACK.md
src/: lib.rs
www/: index.html
