[package]
name = "pkgto-web"
version = "0.1.2"
edition = "2024"
rust-version = "1.91.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
pkcore = "0.0.28"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
