[package]
name = "pkgto-web"
version = "0.1.5"
edition = "2024"
rust-version = "1.91.0"
license = "GPL-3"
repository = "https://github.com/ImperialBower/pkgto-web"
description = "WebAssembly demo client for pkcore library."

[lib]
crate-type = ["cdylib"]

[dependencies]
pkcore = "0.0.39"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
